--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-902.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-759.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-283.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-221.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-635.1KB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-526.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-5.88MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 38.114.114.69, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-845.8KB/s(Youtube:不良林), server: 38.114.114.69, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 169.197.141.187, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-635.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-845.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-640.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
